repsonsive mods for background-attachment 'inital' vs 'fixed' for iOS bug affecting modal display on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -471,6 +471,7 @@ and (max-device-width: 736px) {
     background-position: top !important;
     background-repeat: no-repeat;
     background-size: 70vh !important;
+    background-attachment: initial;
   }
 
   .absolute {
